consolidating queries in the products table